fix: title spacing horizontal page breaks enforcement action graph on highlights page temporary fix for CWA statement on highlights page (2nd statement).

--- a/custom_current.css
+++ b/custom_current.css
@@ -88,7 +88,7 @@ h6 {
   color: #569b5e;
   font-size: 2.8em;
   padding-top: 0px;
-  padding-left: 25px;
+  padding-left: 100px;
   padding-bottom: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
